{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 64,
  "lineage": "4c7cd5c8-f968-3d4a-adca-4aa22e40e346",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d8b282f6227e8ffb",
            "arn": "arn:aws:ec2:ap-south-1:734625667314:instance/i-010e8b9615ecf2452",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010e8b9615ecf2452",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9d47d04fc54ea1b",
            "private_dns": "ip-192-169-2-176.ap-south-1.compute.internal",
            "private_ip": "192.169.2.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08e2feb49be560995",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0159349d4d8a2ec02",
            "tags": {
              "Name": "Mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08eba41a0bceb30d4"
            ]
          },
          "dependencies": [
            "aws_security_group.mysql_sg",
            "aws_subnet.sub_1b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02b9afddbf1c3b2e5",
            "arn": "arn:aws:ec2:ap-south-1:734625667314:instance/i-0e01d555a1523254e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e01d555a1523254e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "task3_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9fa518891abcb4c",
            "private_dns": "ip-192-169-1-219.ap-south-1.compute.internal",
            "private_ip": "192.169.1.219",
            "public_dns": "ec2-13-235-45-154.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.45.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08d74cdcc27bcf22f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0254a99a219edee70",
            "tags": {
              "Name": "WordPress"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0d995471e817ef988"
            ]
          },
          "dependencies": [
            "aws_security_group.wp_sg",
            "aws_subnet.sub_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:internet-gateway/igw-0b50d02cd743b66f0",
            "id": "igw-0b50d02cd743b66f0",
            "owner_id": "734625667314",
            "tags": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f61ea31b8206a8b6",
            "owner_id": "734625667314",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b50d02cd743b66f0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "r"
            },
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07082e7ed5733ac3b",
            "route_table_id": "rtb-0f61ea31b8206a8b6",
            "subnet_id": "subnet-0254a99a219edee70"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.r",
            "aws_subnet.sub_1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:security-group/sg-08eba41a0bceb30d4",
            "description": "ssh and mysql port",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08eba41a0bceb30d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.169.0.0/16"
                ],
                "description": "mysql port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "192.169.0.0/16"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mysql sg",
            "name_prefix": "",
            "owner_id": "734625667314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:security-group/sg-0d995471e817ef988",
            "description": "Allow http ssh all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d995471e817ef988",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wp sg",
            "name_prefix": "",
            "owner_id": "734625667314",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wp sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:subnet/subnet-0254a99a219edee70",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.169.1.0/24",
            "id": "subnet-0254a99a219edee70",
            "map_public_ip_on_launch": true,
            "owner_id": "734625667314",
            "tags": {
              "Name": "sub_1a"
            },
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_1b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:subnet/subnet-0159349d4d8a2ec02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.169.2.0/24",
            "id": "subnet-0159349d4d8a2ec02",
            "map_public_ip_on_launch": false,
            "owner_id": "734625667314",
            "tags": {
              "Name": "sub_1b"
            },
            "vpc_id": "vpc-0bb8cae8971136149"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:734625667314:vpc/vpc-0bb8cae8971136149",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.169.0.0/16",
            "default_network_acl_id": "acl-002494cd5171d85be",
            "default_route_table_id": "rtb-05f60a6a8de3fb579",
            "default_security_group_id": "sg-006914eb26902f477",
            "dhcp_options_id": "dopt-f34bb398",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bb8cae8971136149",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05f60a6a8de3fb579",
            "owner_id": "734625667314",
            "tags": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}